--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,6 +1,12 @@
 .header-container {
   padding: 20px 50px;
   width: 100%;
+  background: white;
+  z-index: 1;
+
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0; /* required */
 
   display: flex;
   justify-content: space-between;
