--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -34,6 +34,7 @@
       height: 100%;
       background-size: cover;
       background-position-y: -400px;
+      background-repeat: no-repeat;
 
       &.left {
         background-position-y: -200px;
