--- a/src/components/homepage-reviews/homepage-reviews.styles.scss
+++ b/src/components/homepage-reviews/homepage-reviews.styles.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   box-sizing: border-box;
   padding: 100px;
+  margin-top: 200px;
 
   .title-text {
     font-size: 15px;
