--- a/src/components/product-preview/product-preview.styles.scss
+++ b/src/components/product-preview/product-preview.styles.scss
@@ -4,6 +4,11 @@
   width: 400px;
   padding-right: 25px;
 
+  &.small {
+    height: 400px;
+    width: 350px;
+  }
+
   .product-image-container {
     height: 100%;
     width: 100%;
