--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -22,6 +22,7 @@
       color: black;
       font-weight: 700;
       font-size: large;
+      cursor: pointer;
       &:hover {
         text-decoration: underline;
       }
