--- a/src/components/product-preview/product-preview.styles.scss
+++ b/src/components/product-preview/product-preview.styles.scss
@@ -8,6 +8,10 @@
     height: 400px;
     width: 350px;
   }
+  &.large {
+    height: 500px;
+    width: 450px;
+  }
 
   .product-image-container {
     height: 100%;
