--- a/src/components/accordion/accordion.styles.scss
+++ b/src/components/accordion/accordion.styles.scss
@@ -1,19 +1,16 @@
 .accordion {
   font-size: 15px;
   font-family: "Vollkorn SC", serif;
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 .accordion__button {
   font-family: "Vollkorn SC", serif;
 
   border: 0;
-  margin: 10px 0;
-  padding: 20px;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   font-size: inherit;
   background: transparent;
   border-bottom: black 1px solid;
@@ -21,15 +18,13 @@
 }
 
 .accordion__button span {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // height: 30px;
+  // width: 30px;
+  // border-radius: 50%;
   color: rgb(0, 0, 0);
   // background: #000;
-  font-size: 12px;
+  // font-size: 12px;
+  cursor: pointer;
 }
 
 .accordion__button:focus {
@@ -37,12 +32,13 @@
 }
 
 .accordion__content {
-  padding: 0 20px;
+  // padding: 0 20px;
   opacity: 0;
   transition: all 0.5s;
   height: 0;
+  width: auto;
   margin: 0;
-  margin-top: -10px;
+  // margin-top: -10px;
   border: 1px solid #f1f1f1;
   border-top: 0;
 }
