--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,4 +1,4 @@
-.custom-button {
+.button-container {
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -20,5 +20,27 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
   }
 }
