--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,8 +1,9 @@
 .footer-container {
-  width: 100vw;
+  width: 96vw;
   height: 50vh;
   padding: 50px 0;
   font-family: "Vollkorn SC", serif;
+  overflow: hidden;
 
   display: flex;
   flex-direction: row;
