--- a/src/components/product-details-and-options/product-details-and-options.styles.scss
+++ b/src/components/product-details-and-options/product-details-and-options.styles.scss
@@ -82,5 +82,11 @@
   }
   .accordion {
     margin: 50px 0;
+    text-align: justify;
+
+    .detail-icon {
+      font-size: 10px;
+      margin: 2px 10px;
+    }
   }
 }
