--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,13 +1,14 @@
-.sign-in {
-  width: 30vw;
+.sign-up-container {
   display: flex;
   flex-direction: column;
+  width: 380px;
 
-  .title {
+  h2 {
+    font-size: 27px;
     margin: 10px 0;
   }
 
-  .buttons {
+  .buttons-container {
     display: flex;
     justify-content: space-between;
   }
