--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,9 +1,10 @@
-.sign-up {
+.sign-up-container {
   display: flex;
   flex-direction: column;
   width: 380px;
 
-  .title {
+  h2 {
+    font-size: 27px;
     margin: 10px 0;
   }
 }
